Add apple pie recipe page content
Add image, description, ingredients, and steps to page

--- a/recipes/apple-pie.html
+++ b/recipes/apple-pie.html
@@ -6,7 +6,66 @@
     <title>Apple Pie Recipe</title>
 </head>
 <body>
-    <h1>Apple Pie Recipe</h1>
     <a href="../index.html">Home</a>
+    <h1>Apple Pie Recipe</h1>
+    <figure>
+        <img src="../images/apple-pie.jpg" alt="Delicious apple pie" width="100%">
+        <figcaption>Image by <a href="https://pixabay.com/users/hansuan_fabregas-2902307/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=7519981">HANSUAN FABREGAS</a> from <a href="https://pixabay.com//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=7519981">Pixabay</a></figcaption>
+    </figure>
+
+    <h2>Description</h2>
+    <p>
+        This beloved apple pie recipe, inspired by Grandma Ople's legendary creation, is the perfect blend of sweet, tender apples and a rich, 
+        buttery caramel sauce—all wrapped in a flaky, golden crust. Each bite brings the comforting taste of tradition, making it a must-have for holidays, 
+        family gatherings, or cozy evenings at home. Simple ingredients, nostalgic flavor, and guaranteed to impress—just like Grandma used to make.
+    </p>
+
+    <h2>Ingredients</h2>
+    <ul>
+        <li>8 small Granny Smith apples</li>
+        <li>1/2 cup of unsalted butter</li>
+        <li>3 tablespoons of all-purpose flour</li>
+        <li>1/2 cup of white sugar</li>
+        <li>1/2 cup of packed brown sugar</li>
+        <li>1/4 cup of water</li>
+        <li>A 9 in. double-crust pie pastry</li>
+    </ul>
+
+    <h2>Steps</h2>
+    <ol>
+        <li>
+            Preheat oven to 425 degrees and Gather all ingredients. Peel and core apples, then thinly slice and set aside.
+        </li>
+        <li>
+            Melt butter in saucepan over medium heat. Add flour and stir, then cook for 1 - 2 minutes.
+            Add both sugars and water, then bring to boil. Reduce heat to low and simmer for 3 - 5 minutes.
+            Remove from heat.
+        </li>
+        <li>
+            Press one pastry into bottom and up the sides of a 9 in. pie pan.
+            Roll out remaining pastry so it will overhang by 0.5 in..
+            Cut pastry into eight 1-in. strips.
+        </li>
+        <li>
+            Place sliced apples into bottom of crust. Lay four pastry strips vertically and evenly spaced over apples; use
+            longer strips in center and shorter strips at edges.
+        </li>
+        <li>
+            Make a lattice cruste. Fold the first and third strips back.
+            Lay one unused strip perpendicular over second and fourth strip, then unfold first and third strip to original position.
+            Fold the second and fourth vertical strips back. Lay one of the three unused strips perpendicularly over top.
+            Unfold second and fourth strips back. Repeat these steps to weave last two strips, then fold and trim excess.
+            Pinch to secure.
+        </li>
+        <li>
+            Slowly and gently pour sugar-butter mixture over lattice crust; let it seep over sliced apples. Brush some onto lattice.
+        </li>
+        <li>
+            Bake in over for 15 minutes. Reduce temperature to 350 degrees and continue baking for 35 - 45 minutes or until apples are soft.
+        </li>
+        <li>
+            Serve and enjoy.
+        </li>
+    </ol>
 </body>
 </html>
