--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="recipes/apple-pie.html">Apple Pie</a>
+    <a href="recipes/crunchy-french-onion-chicken.html">French Onion Chicken</a>
 </body>
 </html>
