--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>Odin Recipes</h1>
     <a href="recipes/apple-pie.html">Apple Pie</a>
     <a href="recipes/crunchy-french-onion-chicken.html">French Onion Chicken</a>
+    <a href="recipes/fruit-smoothie.html">Fruit Smoothie</a>
 </body>
 </html>
