--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/apple-pie.html">Apple Pie</a>
-    <a href="recipes/crunchy-french-onion-chicken.html">French Onion Chicken</a>
-    <a href="recipes/fruit-smoothie.html">Fruit Smoothie</a>
+    <ul>
+        <li><a href="recipes/apple-pie.html">Apple Pie</a></li>
+        <li><a href="recipes/crunchy-french-onion-chicken.html">French Onion Chicken</a></li>
+        <li><a href="recipes/fruit-smoothie.html">Fruit Smoothie</a></li>
+    </ul>
 </body>
 </html>
